# pic-opendal

./: Cargo.toml  README.md  README_zh.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  template.rs  uploader.rs
